<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_not_listening"
        android:textSize="18sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ToggleButton
        android:id="@+id/listenToggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/stop_listening"
        android:textOff="@string/start_listening"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/statusTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/accessibilitySettingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/open_accessibility_settings"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/listenToggleButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/commandFeedbackTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/accessibilitySettingsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
